# rocq-verified-extraction

./: .gitignore  Makefile  README.md  _RocqProject  coq-verified-extraction.opam  coq_true.mlf  rocq-verified-extraction.opam
.github/workflows/: main.yml  nix-action-default.yml
.nix/: config.nix
.nix/coq-overlays/equations/: default.nix
.nix/coq-overlays/metarocq/: default.nix
.nix/coq-overlays/verified-extraction/: default.nix
.nix/overlays/malfunction/: default.nix
benchmarks/lib/: Color.v  Makefile  vs.v
benchmarks/malfunction/: tests.v
benchmarks/malfunction-o2/: tests.v
examples/arity_function/: test.v
examples/erase-conv/: fib.v
examples/multiple/: Makefile
examples/prim-integers/: Makefile  append.v
examples/simple/: Tests.v  test_bootstrap.v  test_extract.v  test_extract_inductive.v  test_extract_ocaml_ffi.v  test_extraction_malfunction.v  test_plugin.v  test_primarray_ffi.v  test_primint_ffi.v  tutorial.v
lib/coq_verified_extraction_ocaml_ffi/lib/: coq_float64.c  dune  float64.ml  float64.mli  uint63.ml
lib/coq_verified_extraction_plugin/lib/: dune  g_verified_extraction.mlg  verified_extraction.ml  verified_extraction.mli
plugin/: CoqMsgFFI.v  Extract.v  Makefile  OCamlFFI.v  PrimArray.v  PrimFloat.v  PrimInt63.v  _CoqProject
plugin/plugin/: Extract.v  Loader.v  META  META.coq-verified-extraction-ocaml  Makefile  Makefile.coq.local  OCamlFFI.v  PrimArray.v  PrimFloat.v  PrimInt63.v  RocqMsgFFI.v  _CoqProject  _RocqProject  fix_extraction.patch  g_verified_extraction_ocaml.mlg  verified_extraction_ocaml.mlpack
plugin/plugin-bootstrap/: CoqMsgFFI.v  Extraction.v  Loader.v  META.coq-verified-extraction-malfunction  Makefile  Makefile.coq.local  OCamlFFI.v  PrimArray.v  PrimFloat.v  PrimInt63.v  RocqMsgFFI.v  Tactics.v  _BootstrapProject  _CoqProject  _RocqProject  compile_malfunction.mli  extract_extraction.v  g_verified_extraction_malfunction.mlg
theories/: CompileCorrect.v  Deserialize.v  Extraction.v  Firstorder.v  Interpreter.v  Mcase.v  Pipeline.v  PipelineCorrect.v  PrintMli.v  RealizabilitySemantics.v  SemanticsSpec.v  Serialize.v  utils_array.v
theories/Ceres/: CeresFormat.v  CeresSerialize.v
(+3 files in other folders)
