opam-version: "2.0"
version: "dev"
maintainer: "yannick.forster@inria.fr"
homepage: "https://github.com/yforster/coq-malfunction/"
dev-repo: "git+https://github.com/yforster/coq-malfunction/"
bug-reports: "https://github.com/yforster/coq-malfunction/issues"
authors: ["Yannick Forster"
          "Matthieu Sozeau"
          "Nicolas Tabareau"]
license: "MIT"
build: [
  [make]
]
install: [
  [make "-j%{jobs}%"]
]
depends: [
  "coq" { >= "8.19" & < "8.20~" }
  "coq-ceres" {= "0.4.1"}
  "rocq-metarocq-erasure-plugin" { = "1.3.2+8.19" }
  "malfunction" {= "0.6" }
]

synopsis: "Verified extraction from Rocq to OCaml"
