opam-version: "2.0"
version: "0.10"
maintainer: "yannick.forster@inria.fr"
homepage: "https://github.com/MetaRocq/rocq-verified-extraction"
dev-repo: "git+https://github.com/MetaRocq/rocq-verified-extraction"
bug-reports: "https://github.com/MetaRocq/rocq-verified-extraction/issues"
authors: ["Yannick Forster"
          "Matthieu Sozeau"
          "Nicolas Tabareau"]
license: "MIT"
build: [
  [make]
]
install: [
  [make "-j%{jobs}%" "install"]
]
depends: [
  "rocq-core" { >= "9.0" & < "10~" }
  "rocq-stdlib" { >= "9.0" & < "10~" }
  "coq-ceres" {= "0.4.1"}
  "rocq-metarocq-erasure-plugin" { >= "1.4+9.0" }
  "malfunction" { >= "0.7" }
]

synopsis: "Verified extraction from Rocq to OCaml"
