opam-version: "2.0"
version: "dev"
maintainer: "yannick.forster@inria.fr"
homepage: "https://github.com/MetaRocq/rocq-verified-extraction"
dev-repo: "git+https://github.com/MetaRocq/rocq-verified-extraction"
bug-reports: "https://github.com/MetaRocq/rocq-verified-extraction/issues"
authors: ["Yannick Forster"
          "Matthieu Sozeau"
          "Nicolas Tabareau"]
license: "MIT"
build: [
  [make]
]
install: [
  [make "-j%{jobs}%" install]
]
depends: [
  "rocq-core" { = "dev" }
  "rocq-stdlib" { = "dev" }
  "coq-ceres" { >= "0.4.1"}
  "rocq-metarocq-erasure-plugin" { = "dev" }
  "malfunction" { >= "0.7" }
]

synopsis: "Verified extraction from Rocq to OCaml"
